Proper div styling added

--- a/homework.html
+++ b/homework.html
@@ -28,6 +28,11 @@
   p {
     border-bottom: gray 1px;
   }
+  
+  .line {
+    width: 502px;
+    border-bottom: 1px solid gray;
+  }
 </style>
 
 <head>
@@ -38,8 +43,7 @@
 
 <body>
   <div id="container" class="center-div">
-
-    <div style="width:502px; border-bottom:1px solid gray;">
+    <div class="line">
       <h1 class="center-text">Aрсентьева Татьяна</h1>
 
       <div class="center-img">
@@ -48,36 +52,35 @@
 
       <p>психолог атомной станции</p>
     </div>
+    <div class="line">
+      <h2>Хочу учить фронтент, потому что:</h2>
 
-    <h2>Хочу учить фронтент, потому что:</h2>
+      <ul>
+        <li>хочу уехать в Лондон</li>
+        <li>чтоб учить психологию в Лондоне нужно много денег</li>
+        <li>фронтент разработчик зарабатывает, а психолог учится</li>
+      </ul>
+    </div>
+    <div class="line">
 
-    <ul>
-      <li>хочу уехать в Лондон</li>
-      <li>чтоб учить психологию в Лондоне нужно много денег</li>
-      <li>фронтент разработчик зарабатывает, а психолог учится</li>
-    </ul>
-    <div style=" width:502px; border-bottom:1px solid gray;">
+      <h2>Мой контактный телефон:</h2>
+
+      <h1>0673833550</h1>
     </div>
 
+    <div class="line">
 
-    <h2>Мой контактный телефон:</h2>
+      <h2>Мой профиль Вконтакте:</h2>
 
-    <h1>0673833550</h1>
+      <a href="https://vk.com/id18426010" target="_blank"><em>vk.com</em></a>
 
-    <div style=" width:502px; border-bottom:1px solid gray;">
     </div>
+    <div class="line">
 
-    <h2>Мой профиль Вконтакте:</h2>
+      <h2>Мой фидбек:</h2>
 
-    <a href="https://vk.com/id18426010" target="_blank"><em>vk.com</em></a>
-
-
-    <div style="height:5px; width:502px; border-bottom:1px solid gray">
+      <p>вы хотите об этом поговорить</p>
     </div>
-
-    <h2>Мой фидбек:</h2>
-
-    <p>вы хотите об этом поговорить</p>
 </body>
 
 </html>
