--- a/homework.html
+++ b/homework.html
@@ -1,44 +1,10 @@
 <!DOCTYPE html>
 <html>
-<style>
-  * {
-    font-family: Arial;
-  }
-  
-  .center-text {
-    text-align: center;
-  }
-  
-  .center-div {
-    margin: auto;
-  }
-  
-  #container {
-    width: 502px;
-  }
-  
-  .center-img {
-    text-align: center;
-  }
-  
-  .center-img img {
-    border: 1px solid gray;
-  }
-  
-  p {
-    border-bottom: gray 1px;
-  }
-  
-  .line {
-    width: 502px;
-    border-bottom: 1px solid gray;
-  }
-</style>
 
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
