added link style.

--- a/homework.html
+++ b/homework.html
@@ -38,7 +38,7 @@
 
       <h2>Мой профиль Вконтакте:</h2>
 
-      <a href="https://vk.com/id18426010" target="_blank"><em>vk.com</em></a>
+      <a class="bottom" href="https://vk.com/id18426010" target="_blank"><em>vk.com</em></a>
 
     </div>
     <div class="line">
